--- a/Creative Pod/Info.plist
+++ b/Creative Pod/Info.plist
@@ -41,5 +41,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>modeg.ttf</string>
+	</array>
 </dict>
 </plist>
