UICollectionView implemented with dummy data to view Members Artwork, created new Image model for collection view

--- a/Creative Pod/Info.plist
+++ b/Creative Pod/Info.plist
@@ -45,5 +45,7 @@
 	<array>
 		<string>modeg.ttf</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Artlink Wish For You To Take A Picture!</string>
 </dict>
 </plist>
